--- a/main.user.css
+++ b/main.user.css
@@ -5,7 +5,7 @@
 @description    Darker theme for Ryver
 @homepageURL    https://github.com/darkerweb/ryver
 @supportURL     https://github.com/darkerweb/ryver/issues
-@updateURL      https://cdn.jsdelivr.net/gh/darkerweb/ryver@latest/dark.css
+@updateURL      https://cdn.jsdelivr.net/gh/darkerweb/ryver@latest/main.user.css
 @license        MIT
 ==/UserStyle== */
 *{
